feat: campaign model 적용