@@ -1,43 +1,50 @@
 package cholog.wiseshop.api.campaign.service;
 
+import cholog.wiseshop.api.campaign.domain.CampaignModel;
+import cholog.wiseshop.api.campaign.domain.CampaignRepository;
+import cholog.wiseshop.api.campaign.domain.CampaignStatus;
 import cholog.wiseshop.api.campaign.dto.request.CreateCampaignRequest;
 import cholog.wiseshop.api.campaign.dto.response.ReadCampaignResponse;
+import cholog.wiseshop.api.product.domain.ProductModel;
 import cholog.wiseshop.api.product.dto.request.CreateProductRequest;
 import cholog.wiseshop.api.product.dto.response.ProductResponse;
 import cholog.wiseshop.db.campaign.Campaign;
-import cholog.wiseshop.db.campaign.CampaignRepository;
-import cholog.wiseshop.db.campaign.CampaignState;
+import cholog.wiseshop.db.campaign.JdbcCampaignRepository;
 import cholog.wiseshop.db.member.Member;
+import cholog.wiseshop.db.product.JdbcProductRepository;
 import cholog.wiseshop.db.product.Product;
-import cholog.wiseshop.db.product.ProductRepository;
 import cholog.wiseshop.db.stock.Stock;
 import cholog.wiseshop.db.stock.StockRepository;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.util.ArrayList;
-import java.util.List;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskScheduler;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.PlatformTransactionManager;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.TransactionTemplate;
 
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.util.ArrayList;
+import java.util.List;
+
 @Service
 @Transactional
 public class CampaignService {
-
     private final CampaignRepository campaignRepository;
-    private final ProductRepository productRepository;
+    private final JdbcCampaignRepository jdbcCampaignRepository;
+    private final JdbcProductRepository productRepository;
     private final StockRepository stockRepository;
     private final ThreadPoolTaskScheduler scheduler;
     private final TransactionTemplate transactionTemplate;
 
-    public CampaignService(CampaignRepository campaignRepository,
-                           ProductRepository productRepository,
-                           StockRepository stockRepository,
-                           ThreadPoolTaskScheduler scheduler,
-                           PlatformTransactionManager transactionManager) {
+    public CampaignService(
+            CampaignRepository campaignRepository, JdbcCampaignRepository jdbcCampaignRepository,
+            JdbcProductRepository productRepository,
+            StockRepository stockRepository,
+            ThreadPoolTaskScheduler scheduler,
+            PlatformTransactionManager transactionManager
+    ) {
         this.campaignRepository = campaignRepository;
+        this.jdbcCampaignRepository = jdbcCampaignRepository;
         this.productRepository = productRepository;
         this.stockRepository = stockRepository;
         this.scheduler = scheduler;
@@ -49,8 +56,8 @@ public class CampaignService {
         Stock stock = stockRepository.save(new Stock(productRequest.totalQuantity()));
         Product product = productRepository.save(
                 new Product(productRequest.name(), productRequest.description(), productRequest.price(), stock));
-        Campaign campaign = campaignRepository.save(
-            new Campaign(request.startDate(), request.endDate(), request.goalQuantity(), member));
+        Campaign campaign = jdbcCampaignRepository.save(
+                new Campaign(request.startDate(), request.endDate(), request.goalQuantity(), member));
         product.addCampaign(campaign);
         scheduleCampaignDate(campaign.getId(), request.startDate(), request.endDate());
         return campaign.getId();
@@ -58,58 +65,55 @@ public class CampaignService {
 
     @Transactional(readOnly = true)
     public ReadCampaignResponse readCampaign(Long campaignId) {
-        List<Product> findProducts = productRepository.findProductsByCampaignId(campaignId);
-        if (findProducts.isEmpty()) {
-            throw new IllegalArgumentException("캠페인이 존재하지 않습니다.");
-        }
-        Product findProduct = findProducts.get(0);
-        Campaign findCampaign = findProduct.getCampaign();
+        CampaignModel campaign = campaignRepository.findById(campaignId);
+        ProductModel product = campaign.products().getFirst();
         return new ReadCampaignResponse(
-            campaignId,
-            findCampaign.getStartDate().toString(),
-            findCampaign.getEndDate().toString(), findCampaign.getGoalQuantity(),
-            new ProductResponse(findProduct)
+                campaignId,
+                campaign.startDate().toString(),
+                campaign.endDate().toString(),
+                campaign.goalQuantity(),
+                new ProductResponse(product)
         );
     }
 
-    public void scheduleCampaignDate(Long campaignId,
-                                     LocalDateTime startDate,
-                                     LocalDateTime endDate) {
+    public void scheduleCampaignDate(
+            Long campaignId,
+            LocalDateTime startDate,
+            LocalDateTime endDate
+    ) {
         Runnable startCampaign = () -> transactionTemplate.execute(status -> {
-            changeCampaingState(campaignId, CampaignState.IN_PROGRESS);
+            changeCampaignState(campaignId, CampaignStatus.IN_PROGRESS);
             return null;
         });
         scheduler.schedule(startCampaign, startDate.atZone(ZoneId.systemDefault()).toInstant());
 
         Runnable endCampaign = () -> transactionTemplate.execute(status -> {
-            changeCampaingState(campaignId, CampaignState.FAILED);
+            changeCampaignState(campaignId, CampaignStatus.FAILED);
             return null;
         });
         scheduler.schedule(endCampaign, endDate.atZone(ZoneId.systemDefault()).toInstant());
     }
 
-    public void changeCampaingState(Long campaignId, CampaignState state) {
-        Campaign campaign = campaignRepository.findById(campaignId)
-            .orElseThrow(() -> new IllegalArgumentException("상태 변경할 캠페인 정보가 존재하지 않습니다."));
+    public void changeCampaignState(Long campaignId, CampaignStatus state) {
+        Campaign campaign = jdbcCampaignRepository.findById(campaignId)
+                .orElseThrow(() -> new IllegalArgumentException("상태 변경할 캠페인 정보가 존재하지 않습니다."));
         campaign.updateState(state);
     }
 
     public boolean isStarted(Long campaignId) {
-        Campaign campaign = campaignRepository.findById(campaignId)
-            .orElseThrow(() -> new IllegalArgumentException("캠페인이 존재하지 않습니다."));
-        if (campaign.getState().equals(CampaignState.IN_PROGRESS)) {
-            return true;
-        }
-        return false;
+        Campaign campaign = jdbcCampaignRepository.findById(campaignId)
+                .orElseThrow(() -> new IllegalArgumentException("캠페인이 존재하지 않습니다."));
+        return CampaignStatus.IN_PROGRESS.equals(campaign.getState());
     }
 
     public List<ReadCampaignResponse> readAllCampaign() {
-        List<Product> products = productRepository.findAll();
+        List<CampaignModel> campaigns = campaignRepository.findAll();
         List<ReadCampaignResponse> allResponses = new ArrayList<>();
-        for (Product product : products) {
+        for (var campaign : campaigns) {
             ReadCampaignResponse response = ReadCampaignResponse.of(
-                product,
-                product.getCampaign());
+                    campaign.products().getFirst(),
+                    campaign
+            );
             allResponses.add(response);
         }
         return allResponses;
